--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-query": "3",
     "react-redux": "^8.0.2",
     "redux-thunk": "^2.4.1",
+    "typewriter-effect": "^2.19.0",
     "zod": "^3.17.10"
   },
   "devDependencies": {
